--- a/src/styles/cardProduct.css
+++ b/src/styles/cardProduct.css
@@ -1,3 +1,17 @@
+:root {
+  --white: #f5f5f5;
+  --100: #2857b5;
+  --200: #1a3875;
+  --300: #3675f5;
+  --400: #0c1a36;
+  --500: #3069db;
+
+  --trans-02: all 0.2s ease;
+  --trans-03: all 0.3s ease;
+  --trans-04: all 0.4s ease;
+  --trans-05: all 0.5s ease;
+}
+
 #contentCard h3 {
   text-align: center;
   font-size: 30px;
@@ -11,7 +25,7 @@
 
 #contentCard {
   width: 30%;
-  height: auto;
+  height: 650px;
   margin: 15px;
   box-sizing: border-box;
   float: left;
@@ -24,7 +38,7 @@
   background: #f2f2f2;
   display: flex;
   flex-direction: column;
-  justify-content: space-between; 
+  justify-content: space-between;
 }
 
 #contentCard:hover {
@@ -48,56 +62,57 @@
   text-align: center;
   margin: 0;
 }
-#contentCard ul{
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 0;
+#contentCard ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0;
 }
-#contentCard li{
-    padding-top: 5px;
+#contentCard li {
+  padding-top: 5px;
 }
-.fa-star{
-    font-size: 26px;
-    transition: .4s;
-    margin: 3px;
+.fa-star {
+  font-size: 26px;
+  transition: 0.4s;
+  margin: 3px;
 }
 
 #contentCard button {
-    text-align: center;
-    font-size: 24px;
-    color: #fff;
-    width: 100%;
-    padding: 15px;
-    border: 0;
-    outline: none;
-    cursor: pointer;
-    border-radius: 20px;
-    background-color: lightcoral;
-  }
+  text-align: center;
+  font-size: 24px;
+  color: #fff;
+  width: 100%;
+  padding: 15px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  border-radius: 20px;
+  background-color: var(--300);
+}
 
-  form{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: auto;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 2px;
-  }
+form {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: auto;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 2px;
+}
 
-  form input{
-    border: none;
-    background-color: transparent;
-    outline: none;
-    padding: 3px;
-  }
-  form button {
-    border: none;
-    outline: none;
-    background-color: transparent;
-  }
-  form button i {
-    color: gray;
-  }
+form input {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  padding: 3px;
+}
+form button {
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+form button i {
+  color: gray;
+  margin-right: .25rem;
+}
