--- a/src/styles/calculadora.css
+++ b/src/styles/calculadora.css
@@ -6,13 +6,13 @@ main {
 }
 
 form {
-  width: 30%;
+  width: 90%;
   align-items: center;
   justify-content: center;
 }
 
 #results {
-  width: 60%;
+  width: 90%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -24,4 +24,14 @@ form {
   font-weight: 500;
   font-style: italic;
   padding: .25rem;
+  text-align: center;
+}
+
+@media (min-width: 1080px){
+  form{
+    width: 30%;
+  }
+  #results{
+    width: 60%;
+  }
 }
