--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,71 +1,85 @@
+#produtos {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
 
-#contentCard h3 {
+.card {
+  display: flex;
+  height: 620px;
+  width: 18rem;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.25);
+  transition: 0.4s;
+}
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.card-img-top{
+  margin-top: 1rem;
+  height: 180px;
+  width: 250px;
+  border-radius: 20px;
+}
+
+.card h5 {
   text-align: center;
-  font-size: 30px;
+  font-size: 28px;
   margin: 0;
   padding-top: 10px;
 }
 
-#contentCard a {
+.card a {
   text-decoration: none;
 }
 
-#contentCard {
-  width: 30%;
-  height: 650px;
-  margin: 15px;
-  box-sizing: border-box;
-  float: left;
-  text-align: center;
-  border-radius: 20px;
-  cursor: pointer;
-  padding-top: 10px;
-  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.25);
-  transition: 0.4s;
-  background: #f2f2f2;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-#contentCard:hover {
+.card:hover {
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   transform: translate(0px, -8px);
 }
-#contentCard img {
-  width: 200px;
-  height: 200px;
-  text-align: center;
-  margin: 0 auto;
-  display: block;
-  border-radius: 8px;
+
+.card p {
+  text-align: justify;
+  padding-top: 8px;
+  overflow: auto; 
+  max-height: 150px;
+  padding: .5rem;
 }
-#contentCard p {
-  text-align: center;
-  padding-top: 0 8px;
-}
-#contentCard h6 {
+
+.card h6 {
   font-size: 26px;
   text-align: center;
   margin: 0;
 }
-#contentCard ul {
+
+.card ul {
+  padding: 0;
   list-style: none;
   display: flex;
-  justify-content: center;
   align-items: center;
-  padding-top: 0;
+  justify-content: center;
 }
-#contentCard li {
+
+.card li {
   padding-top: 5px;
 }
+
 .fa-star {
   font-size: 26px;
   transition: 0.4s;
-  margin: 3px;
 }
 
-#contentCard button {
+.card button {
   text-align: center;
   font-size: 24px;
   color: #fff;
@@ -101,5 +115,5 @@ form button {
 }
 form button i {
   color: gray;
-  margin-right: .25rem;
+  margin-right: 0.25rem;
 }
